fix header spacing and delete .js transition

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,16 +1,26 @@
 .header {
-	padding: 80px 0 0;
+	padding: 150px 0 0;
 	text-align: center;
 	background-color: white;
 }
 
-.header-title {
+/*.header-title {
 	font-family: $font-family-secondary-bold;
 	font-size: 55px;
 	margin: 0;
 	color: $primary;
   span {
     opacity: 0;
+    color: rgba($primary, .6);
+  }
+}*/
+
+.header-title {
+  font-family: $font-family-secondary-bold;
+  font-size: 55px;
+  margin: 0;
+  color: $primary;
+  span {
     color: rgba($primary, .6);
   }
 }
@@ -44,7 +54,15 @@
   animation: all 0.3s ease-in-out;
 }
 
-#gh-btns-container {
+.gh-btns {
+  margin: 0;
+  margin-top: 150px;
+  background: rgba($primary, .07);
+  padding-top: 16px;
+  padding-bottom: 10.5px;
+}
+
+/*#gh-btns-container {
   margin-left: 0;
   margin-right: 0;
   padding-left: 0;
@@ -60,7 +78,7 @@
   #gh-count:hover {
     color: $accent;
   }
-}
+}*/
 
 code {
   background-color: white;
@@ -86,17 +104,27 @@ code {
   }
 }
 
+@media (min-width: $screen-sm-min) {
+  .header-title {
+    font-size: 99px;
+  }
+  .header-subtitle {
+    font-size: 24px;
+  }
+  /*gh-btns {
+    margin-top: 0;
+  }
+  .header {
+    padding-top: 140px;
+  }*/
+}
+
 /* Transition */
 
 #header-h1 {
   opacity: 0;
   -webkit-animation: fadeInRight 1s ease 1 forwards;
   animation: fadeInRight 1s ease 1 forwards;
-  
-  span {
-    -webkit-animation: fadeIn 1s ease 1.3s 1 forwards;
-    animation: fadeIn 1s ease 1.3s 1 forwards;
-  }
 }
 
 #header-h2 {
@@ -119,20 +147,6 @@ code {
   opacity: 0;
   -webkit-animation: fadeInBottom 0.6s ease .6s 1 forwards;
   animation: fadeInBottom 0.6s ease .6s 1 forwards; }
-
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
-
-@keyframes fadeIn {
-  0% {
-    transform: translate3d(0, -80px, 0);
-    opacity: 0; }
-  100% {
-    transform: translate3d(0, 0, 0);
-    opacity: 1; } }
 
 @-webkit-keyframes fadeInTop {
   0% {
@@ -198,23 +212,3 @@ code {
     transform: translate3d(0, 0, 0);
     opacity: 1; } }
 
-
-@media (min-width: $screen-sm-min) {
-  .header-title {
-    font-size: 99px;
-  }
-  .header-subtitle {
-    font-size: 24px;
-  }
-  .header-cta {
-    a {
-      margin-bottom: 140px;
-    }
-  }
-  gh-btns {
-    margin-top: 0;
-  }
-  .header {
-    padding-top: 140px;
-  }
-}
